# minesweeper

./: CMakeLists.txt  README.adoc  README.html  README.md  README_DOXY.md  TASK.adoc  TASK.html  checkingFunctions.c  checkingFunctions.h  minesweeper.c  minesweeper.h  playerInfo.c  playerInfo.h  prints.c  prints.h  revealFields.c  revealFields.h
doxygen/html/: _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e___d_o_x_y_8md.html  annotated.html  annotated_dup.js  checking_functions_8c.html  checking_functions_8c.js  checking_functions_8c_source.html  checking_functions_8h.html  checking_functions_8h.js  checking_functions_8h_source.html  classes.html  dir_407434034662d9b411d5e4671f839977.html  dir_407434034662d9b411d5e4671f839977.js  dir_41b08a779f1029baa1a043747248c275.html  dir_41b08a779f1029baa1a043747248c275.js  dir_4905c2a059c126481fe862de1effc122.html  dir_4905c2a059c126481fe862de1effc122.js  dir_bc0603c47f732419ee66d076614caf2f.html  dir_bc0603c47f732419ee66d076614caf2f.js  dir_d522931ffa1371640980b621734a4381.html  dir_e3df3acaf7e081b2d1e4fa702b99846f.html  dir_e3df3acaf7e081b2d1e4fa702b99846f.js  dir_e9dc397d0c389140f10bfd752b291e88.html  files.html  functions.html  functions_vars.html  generate_playfield_8c.html  generate_playfield_8c.js  generate_playfield_8c_source.html  generate_playfield_8h.html  generate_playfield_8h.js  generate_playfield_8h_source.html  globals.html  globals_defs.html  globals_func.html  (+33 more)
src/: checkingFunctions.c  generatePlayfield.c  generatePlayfield.h  minesweeper.c  minesweeper.h  playerInfo.c  playerInfo.h  revealFields.c
(+70 files in other folders)
